Fixed text alignment of book-tags

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,6 @@
-.book-tag-wrapper {
-  margin:5px;
+.book-tag-icon {
+  float:left;
+  margin-right:10px;
 }
 .book-tag {
   width:75%;
@@ -14,9 +15,10 @@
   margin:auto;
 }
 .book-tag-text {
-  display:inline;
-  margin-left:10px;
-  font-size: 2em;
+  display:block;
+  float:middle;
+  margin-top:9px;
+  font-size: 1.5em;
   color:#595959;
 }
 
